<resources>
    <string name="app_name">Goalazo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="connectivity_toast">Internet connection is required to fetch data.</string>
    <string name="download_completed_toast">Download Completed. File saved to folder "FootballGIFs"</string>
    <string name="downloading_file_toast">Downloading file</string>
    <string name="notification_ticker" />

    <string name="open_source_licenses">Open source licenses</string>
    <string name="license_dialog_header">License details for open-source software</string>
    <string name="okhttp_license_header">Okhttp</string>
    <string name="okhttp_license">Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dagger_license_header">Dagger 2</string>
    <string name="dagger_license">Copyright 2012 Square, Inc. Copyright 2012 Google, Inc.  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="rxjava_license">Copyright 2013 Netflix, Inc.  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at  http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="rxjava_license_header">RxJava</string>
    <string name="rxandroid_license_header">RxAndroid</string>
    <string name="rxandroid_license">Copyright 2015 The RxAndroid authors  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at      http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="picasso_license_header">Picasso</string>
    <string name="picasso_license">Copyright 2013 Square, Inc.  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="smoothprogressbar_license_header">SmoothProgressBar</string>
    <string name="smoothprogressbar_license">Copyright 2014 Antoine Merle  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at      http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="buy_pro">Remove ads</string>
    <string name="download_failed">Could not find the video. The original link may have been deleted</string>
    <string name="popup_original_post">Go to the original post</string>
    <string name="popup_share">Share</string>
    <string name="reddit_error">Reddit\'s servers are not responding. Try again…</string>
    <string name="feature_unavailable">This feature is only available for posts made after the app was published.</string>
    <string name="popup_download">Download</string>
    <string name="playback_error">An error occured during playback. The video may not be available.</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="version">Version 1.0</string>
</resources>
