<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/open_source_licenses"
          android:title="@string/open_source_licenses"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/version"
        android:title="@string/version"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/check_for_updates"
        android:title="@string/check_for_updates"
        android:orderInCategory="100"
        app:showAsAction="never"/>

      <item android:id = "@+id/refresh"
            app:showAsAction="always"
            android:icon="@mipmap/ic_action_refresh"
            android:title="@string/refresh"/>
</menu>
