<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license_dialog_header"
        android:textColor="?attr/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dagger_license_header"
                android:textColor="@color/md_teal_900"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dagger_license"
                android:textColor="@color/md_black_1000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_teal_900"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:text="@string/rxjava_license_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/rxjava_license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_teal_900"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/okhttp_license_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/okhttp_license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_teal_900"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/rxandroid_license_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/rxandroid_license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_teal_900"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/picasso_license_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/picasso_license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_teal_900"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/smoothprogressbar_license_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/smoothprogressbar_license" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>